Fixes spacing and description in garden

--- a/src/assets/css/7-components/_postlist.scss
+++ b/src/assets/css/7-components/_postlist.scss
@@ -25,7 +25,7 @@
 @media (min-width: 768px) {
     .post-grid {
         grid-template-columns: 1fr 1fr;
-        gap: 2.5rem 5rem;
+        gap: 2.5rem var(--fluid-3);
 
         &-title {
             font-size: var(--fluid-0);
