--- a/src/assets/css/_shame.scss
+++ b/src/assets/css/_shame.scss
@@ -24,7 +24,9 @@
   container: inline;
 }
 .layout-base .post {
-  max-width: 70cqi;
+  @media (min-width: 768px) {
+    max-width: 70cqi;
+  }
 }
 
 .utterances:not(:has( + .utterances)) {
